# atlas-1

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/console/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/console/public/: console.css
apps/console/src/: main.ts
design/: design.tar
design/atlas-1/: README.md
design/atlas-1/chats/: chat1.md
design/atlas-1/project/: Atlas 1 Life Console-print.html  Atlas 1 Life Console.html  Atlas 1 Wireframes.html  console.css  styles.css
docs/: ARCHITECTURE.md  PLUGIN_API.md  RELEASING.md  TECH-DEBT.md
docs/reviews/: code-quality.md  forker-readiness.md  performance.md  security.md  uiux.md
docs/superpowers/plans/: 2026-04-19-m1-skeleton.md  2026-04-19-m2-core-sdk.md  (+11 more)
plugins/habits/: README.md  main.js  main.test.js  manifest.json  package.json  parser.js  parser.test.js
plugins/journal/: README.md  main.js  main.test.js  manifest.json  package.json  parser.js  parser.test.js  vitest.config.js
plugins/tasks/: README.md  main.js  main.test.js  manifest.json  package.json  parser.js  parser.test.js  vitest.config.js
plugins/template/: README.md  main.js  manifest.json  package.json
scripts/: new-plugin.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  vault.rs
tests/: smoke.spec.ts
(+24 files in other folders)
