[package]
name = "atlas-1"
version = "0.1.0"
description = "Atlas 1 — life console"
authors = ["Jim Fordham"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "atlas_1_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
